breadcrumbs and meta

--- a/templates/category.hbs
+++ b/templates/category.hbs
@@ -1,4 +1,4 @@
-{{{breadcrumbs}}}breadcrumbs
+{{{breadcrumbs}}}
 <section class="catalog-grid">
     <div class="container">
         <h1 class="with-sorting">{{category.title}}</h1>
