--- a/templates/layout.hbs
+++ b/templates/layout.hbs
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>{{title}}</title>
+    <title>{{common.title}}</title>
     <meta charset="UTF-8">
-    <meta name="description" content="{{meta.description}}"/>
-    <meta name="title" content="{{meta.title}}"/>
-    <meta name="keywords" content="{{meta.keywords}}"/>
+    <meta name="description" content="{{common.meta.description}}"/>
+    <meta name="title" content="{{common.meta.title}}"/>
+    <meta name="keywords" content="{{common.meta.keywords}}"/>
 
 
     <script src="/js/libs/jquery-1.11.1.min.js"></script>
