--- a/templates/layout.hbs
+++ b/templates/layout.hbs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>{{common.title}}</title>
+    <title>{{common.title}} | LUXYsexy{{#if common.city}} в {{common.city.titles.in}}{{/if}}</title>
     <meta charset="UTF-8">
     <meta name="description" content="{{common.meta.description}}"/>
     <meta name="title" content="{{common.meta.title}}"/>
