--- a/templates/partials/catalog_menu.hbs
+++ b/templates/partials/catalog_menu.hbs
@@ -23,7 +23,7 @@
         </ul>
     </li>
     <li class="{{!hide-sm}}">
-        <a href="javascript:chooseCity()"><i class="fa fa-map-marker"></i>&nbsp;{{#if factory.from.query.city}}{{factory.from.query.city.title}}{{else}}Указать город{{/if}}</a>
+        <a href="javascript:chooseCity()"><i class="fa fa-map-marker"></i>&nbsp;{{#if city}}{{city.title}}{{else}}Указать город{{/if}}</a>
     </li>
 </ul>
 <ul class="catalog">
