--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -65,7 +65,7 @@
             <div class="col-lg-5 col-md-5 col-sm-5">
                 <div class="info">
                     <a class="logo" href="/"><img src="/img/logo4.png" alt="LUXYsexy"/></a>
-                    <p>Магазин LUXYsexy {{#if factory.from.query.city}}города {{factory.from.query.city.titles.from}} {{/if}}поставляет товары только самого высокого качества,
+                    <p>Магазин LUXYsexy {{#if city}}города {{city.titles.from}} {{/if}}поставляет товары только самого высокого качества,
                         с гарантией производителя и возможностью возврата. Посылка упаковывается конфиденциально и не имеет отличительных признаков.
                     </p>
                     {{!
