--- a/templates/layout.hbs
+++ b/templates/layout.hbs
@@ -8,7 +8,7 @@
     <meta name="title" content="{{common.meta.title}}"/>
     <meta name="keywords" content="{{common.meta.keywords}}"/>
 
-
+    <meta name="yandex-verification" content="{{common.city.yandexUin}}" />
     <script src="/js/libs/jquery-1.11.1.min.js"></script>
     <!--Mobile Specific Meta Tag-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
