new client cart

--- a/templates/layout.hbs
+++ b/templates/layout.hbs
@@ -27,6 +27,7 @@
     <![endif]-->
 
     <script src="/js/emerge.js"></script>
+    <script src="/js/cart.js"></script>
 
     {{#if vakoo.production}}
         <!-- Yandex.Metrika counter -->
