--- a/templates/partials/toolbar.hbs
+++ b/templates/partials/toolbar.hbs
@@ -3,7 +3,7 @@
     <button class="search-btn btn-outlined-invert"><i class="icon-magnifier"></i></button>
 
     <div class="cart-btn empty">
-        <a class="btn btn-outlined-invert" href="/cart"><i class="icon-shopping-cart-content"></i><span class="rect"></span></a>
+        <a class="btn btn-outlined-invert" href="#" onclick="cart.show(this)"><i class="icon-shopping-cart-content"></i><span class="rect"></span></a>
 
         <!--Cart Dropdown-->
         <div class="cart-dropdown">
@@ -19,8 +19,8 @@
             </div>
             <div class="footer group">
                 <div class="buttons">
-                    <a class="btn btn-outlined-invert" href="/checkout"><i class="icon-download"></i>Оформить</a>
-                    <a class="btn btn-outlined-invert" href="/cart"><i class="icon-shopping-cart-content"></i>В корзину</a>
+                    <a class="btn btn-outlined-invert" href="#" onclick="cart.checkout(event)"><i class="icon-download"></i>Оформить</a>
+                    <a class="btn btn-outlined-invert" href="#" onclick="cart.show(this)"><i class="icon-shopping-cart-content"></i>В корзину</a>
                 </div>
                 <div class="total"><span class="t"></span>&nbsp;<span class="fa fa-rouble"></span></div>
             </div>
