--- a/templates/partials/catalog_menu.hbs
+++ b/templates/partials/catalog_menu.hbs
@@ -29,24 +29,52 @@
 <ul class="catalog">
     <li class="has-submenu"><a href="{{tree.dlya-nee.path}}">{{tree.dlya-nee.title}}<i class="fa fa-chevron-down"></i></a>
         <ul class="submenu">
-            <li>
-                <a href="{{tree.analnaya-stimulyaciya.path}}">{{tree.analnaya-stimulyaciya.title}}</a>
+            <li class="has-submenu">
+                <a href="{{tree.analnaya-stimulyaciya.childs.1.path}}">{{tree.analnaya-stimulyaciya.childs.1.title}}</a>
+                <ul class="sub-submenu">
+                    {{#each tree.analnaya-stimulyaciya.childs.1.childs}}
+                        <li><a href="{{path}}">{{title}}</a></li>
+                    {{/each}}
+                </ul>
             </li>
 
             {{#each tree.dlya-nee.childs}}
-                <li><a href="{{path}}">{{title}}</a></li>
+                <li {{#if childs}}class="has-submenu"{{/if}}>
+                    <a href="{{path}}">{{title}}</a>
+                    {{#if childs}}
+                        <ul class="sub-submenu">
+                            {{#each childs}}
+                                <li><a href="{{path}}">{{title}}</a></li>
+                            {{/each}}
+                        </ul>
+                    {{/if}}
+                </li>
             {{/each}}
         </ul>
     </li>
 
     <li class="has-submenu"><a href="{{tree.dlya-nego.path}}">{{tree.dlya-nego.title}}<i class="fa fa-chevron-down"></i></a>
         <ul class="submenu">
-            <li class="">
+            <li class="has-submenu">
                 <a href="{{tree.analnaya-stimulyaciya.path}}">{{tree.analnaya-stimulyaciya.title}}</a>
+                <ul class="sub-submenu">
+                    {{#each tree.analnaya-stimulyaciya.childs}}
+                        <li><a href="{{path}}">{{title}}</a></li>
+                    {{/each}}
+                </ul>
             </li>
 
             {{#each tree.dlya-nego.childs}}
-                <li><a href="{{path}}">{{title}}</a></li>
+                <li {{#if childs}}class="has-submenu"{{/if}}>
+                    <a href="{{path}}">{{title}}</a>
+                    {{#if childs}}
+                        <ul class="sub-submenu">
+                            {{#each childs}}
+                                <li><a href="{{path}}">{{title}}</a></li>
+                            {{/each}}
+                        </ul>
+                    {{/if}}
+                </li>
             {{/each}}
         </ul>
     </li>
@@ -58,7 +86,16 @@
             </li>
 
             {{#each tree.dlya-dvoih.childs}}
-                <li><a href="{{path}}">{{title}}</a></li>
+                <li {{#if childs}}class="has-submenu"{{/if}}>
+                    <a href="{{path}}">{{title}}</a>
+                    {{#if childs}}
+                        <ul class="sub-submenu">
+                            {{#each childs}}
+                                <li><a href="{{path}}">{{title}}</a></li>
+                            {{/each}}
+                        </ul>
+                    {{/if}}
+                </li>
             {{/each}}
         </ul>
     </li>
@@ -66,7 +103,16 @@
     <li class="has-submenu"><a href="{{tree.eroticheskaya-odezhda-i-bele.path}}">Бельё и одежда<i class="fa fa-chevron-down"></i></a>
         <ul class="submenu">
             {{#each tree.eroticheskaya-odezhda-i-bele.childs}}
-                <li><a href="{{path}}">{{title}}</a></li>
+                <li {{#if childs}}class="has-submenu"{{/if}}>
+                    <a href="{{path}}">{{title}}</a>
+                    {{#if childs}}
+                        <ul class="sub-submenu">
+                            {{#each childs}}
+                                <li><a href="{{path}}">{{title}}</a></li>
+                            {{/each}}
+                        </ul>
+                    {{/if}}
+                </li>
             {{/each}}
         </ul>
     </li>
@@ -75,7 +121,16 @@
     <li class="has-submenu"><a href="{{tree.fetish-i-bdsm.path}}">BDSM<i class="fa fa-chevron-down"></i></a>
         <ul class="submenu">
             {{#each tree.fetish-i-bdsm.childs}}
-                <li><a href="{{path}}">{{title}}</a></li>
+                <li {{#if childs}}class="has-submenu"{{/if}}>
+                    <a href="{{path}}">{{title}}</a>
+                    {{#if childs}}
+                        <ul class="sub-submenu">
+                            {{#each childs}}
+                                <li><a href="{{path}}">{{title}}</a></li>
+                            {{/each}}
+                        </ul>
+                    {{/if}}
+                </li>
             {{/each}}
         </ul>
     </li>
@@ -83,7 +138,16 @@
     <li class="hide-sm has-submenu"><a href="{{tree.prezervativy-i-smazki.path}}">{{tree.prezervativy-i-smazki.title}}<i class="fa fa-chevron-down"></i></a>
         <ul class="submenu">
             {{#each tree.prezervativy-i-smazki.childs}}
-                <li><a href="{{path}}">{{title}}</a></li>
+                <li {{#if childs}}class="has-submenu"{{/if}}>
+                    <a href="{{path}}">{{title}}</a>
+                    {{#if childs}}
+                        <ul class="sub-submenu">
+                            {{#each childs}}
+                                <li><a href="{{path}}">{{title}}</a></li>
+                            {{/each}}
+                        </ul>
+                    {{/if}}
+                </li>
             {{/each}}
         </ul>
     </li>
