--- a/templates/thanks.hbs
+++ b/templates/thanks.hbs
@@ -1,9 +1,12 @@
 {{{breadcrumbs}}}
+
+{{#if order}}
 <script type="text/javascript">
     $(function(){
         cart.setOrder('{{{order}}}')
     })
 </script>
+{{/if}}
 <section class="support">
     <div class="container">
         <div class="row">
