--- a/templates/thanks.hbs
+++ b/templates/thanks.hbs
@@ -27,7 +27,7 @@
                             Для оплаты заказа на сумму {{summ}} <i class="fa fa-rouble"></i> вы будете перенаправленны в сервис Робокасса по
                             ссылке <a href="{{link}}">{{link}}</a>
                             <script type="text/javascript">
-                                //setTimeout(function(){window.location = '{{link}}'}, 5000)
+                                setTimeout(function(){window.location = '{{link}}'}, 5000)
                             </script>
                         {{else}}
                         <h4 class="light-weight uppercase">
