--- a/templates/partials/product_card.hbs
+++ b/templates/partials/product_card.hbs
@@ -13,7 +13,7 @@
 
         <a href="{{url}}" class="image-container">
             <span class="image-verticalator"></span>
-            <img src="http://luxy.sexy{{image.path}}" alt="{{image.alt}}" title="{{image.alt}}"/>
+            <img src="http://static.luxy.sexy{{image.path}}" alt="{{image.alt}}" title="{{image.alt}}"/>
         </a>
         <div class="footer">
             <a href="{{url}}">{{title}}</a>
