--- a/templates/main_page.hbs
+++ b/templates/main_page.hbs
@@ -20,9 +20,9 @@
                             {{!<a class="btn btn-success" href="#">Browse all PC</a>}}
                         </div>
                         <!--Image-->
-                        <img style="right: 50px;" class="ms-layer img-block" src="http://luxy.sexy{{mainImage.path}}" alt="{{mainImage.alt}}" data-effect="back(500)" data-duration="800" data-delay="350" data-ease="easeOutQuad"/>
+                        <img style="right: 50px;" class="ms-layer img-block" src="http://static.luxy.sexy{{mainImage.path}}" alt="{{mainImage.alt}}" data-effect="back(500)" data-duration="800" data-delay="350" data-ease="easeOutQuad"/>
                         <div class="ms-thumb">
-                            <img src="http://luxy.sexy{{mainSmallImage.path}}" alt="{{{mainSmallImage.alt}}}"/>
+                            <img src="http://static.luxy.sexy{{mainSmallImage.path}}" alt="{{{mainSmallImage.alt}}}"/>
                             <h3>{{title}}</h3>
                         </div>
                     {{/with}}
