--- a/templates/cart.hbs
+++ b/templates/cart.hbs
@@ -20,7 +20,7 @@
 
                         {{#each products}}
                             <tr class="item" data-id="{{_id}}">
-                                <td class="thumb"><a href="{{url}}"><img src="http://luxy.sexy{{image.path}}" alt="{{title}} {{shortDesc}}" width="152" height="119"/></a></td>
+                                <td class="thumb"><a href="{{url}}"><img src="http://static.luxy.sexy{{image.path}}" alt="{{title}} {{shortDesc}}" width="152" height="119"/></a></td>
                                 <td class="name">
                                     <a href="{{url}}">{{title}}</a><br/>
                                     <small style="font-size:0.6em">{{shortDesc}}</small>
