--- a/templates/product.hbs
+++ b/templates/product.hbs
@@ -23,7 +23,7 @@
 
                     {{#each product.images}}
                         <div class="ms-slide">
-                            <img src="/masterslider/blank.gif" data-src="http://luxy.sexy{{path}}" alt="{{alt}}"/>
+                            <img src="/masterslider/blank.gif" data-src="http://static.luxy.sexy{{path}}" alt="{{alt}}"/>
                             <img class="ms-thumb" src="http://static.luxy.sexy{{path}}" alt="thumb" />
                         </div>
                     {{/each}}
