--- a/templates/main_page.hbs
+++ b/templates/main_page.hbs
@@ -34,7 +34,7 @@
 </section><!--Categories Slider Close-->
 
 
-{{#if newcomers.length}}
+{{!#if newcomers.length}}
     <!--Catalog Grid-->
     <section class="catalog-grid">
         <div class="container">
@@ -46,4 +46,4 @@
             </div>
         </div>
     </section><!--Catalog Grid Close-->
-{{/if}}
+{{!/if}}
