--- a/templates/partials/catalog_menu.hbs
+++ b/templates/partials/catalog_menu.hbs
@@ -16,7 +16,7 @@
     </li>
     <li class="{{!hide-sm}} has-submenu"><a href="/support">Помощь от LUXYsexy</a>
         <ul class="submenu">
-            <li><a href="/order">Как сделать заказ</a></li>
+            <li><a href="/how-to-order">Как сделать заказ</a></li>
             <li><a href="/sizes">Таблицы размеров</a></li>
             <li><a href="/feedback">Обратная связь</a></li>
             <li><a href="/contacts">Контакты</a></li>
